Fixed too wide images.

--- a/doc/documentation.css
+++ b/doc/documentation.css
@@ -687,6 +687,10 @@ pre.programlisting {
     border-left: 0px;
 }
 
+.screenshot img {
+    width: 100%;
+}
+
 .emphasis {
     font-style: italic;
 }
